<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    tools:context="com.example.administrator.singleinstance.MainActivity"
    >

    <TextView
        android:id="@+id/tv_1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proto_cur"
        android:gravity="start"
        android:textSize="24sp"
        android:textColor="@color/colorTVText"
        android:background="@color/colorTVBackground"
        android:typeface="sans"
        />
    <Spinner
        android:id="@+id/Spi_FromCurList"
        android:layout_width="20dp"
        android:layout_height="20dp"

        android:layout_toEndOf="@+id/tv_1"
        android:layout_toRightOf="@+id/tv_1"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"

        android:layout_alignTop="@+id/tv_1"
        android:layout_alignBottom="@+id/tv_1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:textColor="@color/colorSpiText"
        android:background="@color/colorSpiBackground"
        android:typeface="sans"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        >
    </Spinner>
    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_below="@+id/tv_1"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@+id/tv_1"
        android:layout_alignLeft="@+id/tv_1"

        android:text="@string/target_cur"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorTVText"
        android:background="@color/colorTVBackground"
        android:typeface="sans"
        />
    <Spinner
        android:id="@+id/Spi_ToCurList"
        android:layout_width="35dp"
        android:layout_height="35dp"

        android:layout_toEndOf="@+id/tv_2"
        android:layout_toRightOf="@+id/tv_2"
        android:layout_alignTop="@+id/tv_2"
        android:layout_alignBottom="@+id/tv_2"

        android:layout_below="@+id/Spi_FromCurList"
        android:layout_alignStart="@+id/Spi_FromCurList"
        android:layout_alignLeft="@+id/Spi_FromCurList"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:textColor="@color/colorSpiText"
        android:background="@color/colorSpiBackground"
        android:typeface="sans"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        >
    </Spinner>
    <TextView
        android:id="@+id/tv_3"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_below="@+id/tv_2"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@+id/tv_2"
        android:layout_alignLeft="@+id/tv_2"

        android:text="@string/exch_rate"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorTVText"
        android:background="@color/colorTVBackground"
        android:typeface="sans"
        />
    <TextView
        android:id="@+id/rate"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_below="@+id/Spi_ToCurList"
        android:layout_alignTop="@+id/tv_3"
        android:layout_alignBottom="@+id/tv_3"

        android:layout_toEndOf="@+id/tv_3"
        android:layout_toRightOf="@+id/tv_3"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="2sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textColor="@color/colorTVText"
        android:background="@color/colorTVBackground"
        android:typeface="serif"

        />
    <TextView
        android:id="@+id/tv_4"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_below="@+id/tv_3"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@+id/tv_3"
        android:layout_alignLeft="@+id/tv_3"

        android:text="@string/exch_num"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorTVText"
        android:background="@color/colorTVBackground"
        android:typeface="sans"
        />
    <EditText
        android:id="@+id/exch_num"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_toEndOf="@+id/tv_4"
        android:layout_toRightOf="@+id/tv_4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/tv_4"
        android:layout_alignBottom="@+id/tv_4"

        android:layout_below="@+id/rate"
        android:inputType="number|numberDecimal"
        android:textColor="@color/colorSpiText"
        android:background="@color/colorSpiBackground"
        android:typeface="sans"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tv_5"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_below="@+id/tv_4"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@+id/tv_4"
        android:layout_alignLeft="@+id/tv_4"

        android:text="@string/spend_cost"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorTVText"
        android:background="@color/colorTVBackground"
        android:typeface="sans"
        />
    <TextView
        android:id="@+id/spend_cost"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_toEndOf="@+id/tv_5"
        android:layout_toRightOf="@+id/tv_5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/tv_5"
        android:layout_alignBottom="@+id/tv_5"

        android:layout_below="@+id/exch_num"
        android:textColor="@color/colorSpiText"
        android:background="@color/colorSpiBackground"
        android:typeface="sans"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        />

    <Button
        android:id="@+id/search_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_5"
        android:background="@color/colorButtonBackground"

        android:gravity="center"
        android:onClick="search_rate_bn_onClick"

        android:text="@string/sea_rate1"
        android:textColor="@color/colorButtonText"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_marginLeftPercent="2%"
        app:layout_marginStartPercent="2%"
        app:layout_marginTopPercent="2%"
        app:layout_widthPercent="46%" />

    <Button
        android:id="@+id/calculate_cost"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_alignBottom="@+id/search_rate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/search_rate"

        android:layout_below="@+id/spend_cost"
        android:layout_toEndOf="@+id/search_rate"
        android:layout_toRightOf="@+id/search_rate"
        android:background="@color/colorButtonBackground"

        android:gravity="center"
        android:onClick="calculate_cost_bn_onClick"

        android:text="@string/calculate_cost"
        android:textColor="@color/colorButtonText"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_marginEndPercent="2%"
        app:layout_marginLeftPercent="4%"
        app:layout_marginRightPercent="2%"
        app:layout_marginStartPercent="4%"
        app:layout_widthPercent="46%" />
</android.support.percent.PercentRelativeLayout>